--- a/correlation.ipynb
+++ b/correlation.ipynb
@@ -31,7 +31,7 @@
     {
       "cell_type": "code",
       "source": [
-        "siy = ('intersections.csv')\n",
+        "siy = ('questionnaire_text_response.csv')\n",
         "df = pd.read_csv(siy)\n",
         "df.head()\n",
         "df=df.drop(\"timestamp\", axis=1)\n",
